Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-46339

QTcpSocket connectToHost fails on Windows Phone 8.1 and WinRT

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.5.0
    • 5.5.0 Beta
    • Network: Sockets
    • None
    • Windows 8.1 Pro, VS 2013 Update 4 Ultimate, Qt 5.5 latest git
    • WinRT
    • dbddb1751e448a157c9900ce72e8e956f4102314

    Description

      The problem has been described here by someone else: "https://forum.qt.io/topic/48193/qt-5-4-qtcpsocket-failure-in-winrt-with-qnativesocketengineprivate-nativeconnect-could-not-obtain-connect-action"

      Connecting to a TCP server with "QTcpSocket::connectToHost()" fails on Windows Phone (and WinRT) and the socket never reaches the "Connected" state. Calling "QTcpSocket::waitForConnected(time)" immediately returns false. The remote server receives the connection request form the QTcpSocket.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            owolff Oliver Wolff
            DanielSt Peter Staab
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes